v0.5.0/_sources/gallery/embellishments/solar.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/embellishments/solar.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_embellishments_solar.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_embellishments_solar.py:


Day-night terminator line and twilights
---------------------------------------

Use :meth:`pygmt.Figure.solar` to show the different transition stages between
daytime and nighttime. The parameter ``terminator`` is used to set the twilight
stage, and can be either 'day-night' (brightest), 'civil', 'nautical', or
'astronomical' (darkest). Refer to https://en.wikipedia.org/wiki/Twilight for
more information.

.. GENERATED FROM PYTHON SOURCE LINES 11-52



.. image-sg:: /gallery/embellishments/images/sphx_glr_solar_001.png
   :alt: solar
   :srcset: /gallery/embellishments/images/sphx_glr_solar_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import datetime

    import pygmt

    fig = pygmt.Figure()
    # Create a figure showing the global region on a Mollweide projection
    # Land color is set to dark green and water color is set to light blue
    fig.coast(region="d", projection="W0/15c", land="darkgreen", water="lightblue")
    # Set a time for the day-night terminator and twilights, 1700 UTC on
    # January 1, 2000
    terminator_datetime = datetime.datetime(
        year=2000, month=1, day=1, hour=17, minute=0, second=0
    )
    # Set the pen line to be 0.5p thick
    # Set the fill for the night area to be navy blue at different transparency
    # levels
    fig.solar(
        terminator="day_night",
        terminator_datetime=terminator_datetime,
        fill="navyblue@95",
        pen="0.5p",
    )
    fig.solar(
        terminator="civil",
        terminator_datetime=terminator_datetime,
        fill="navyblue@85",
        pen="0.5p",
    )
    fig.solar(
        terminator="nautical",
        terminator_datetime=terminator_datetime,
        fill="navyblue@80",
        pen="0.5p",
    )
    fig.solar(
        terminator="astronomical",
        terminator_datetime=terminator_datetime,
        fill="navyblue@80",
        pen="0.5p",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  2.003 seconds)


.. _sphx_glr_download_gallery_embellishments_solar.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: solar.py <solar.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: solar.ipynb <solar.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
